<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ffffff"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/cc_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@color/c_ffffff"
        app:titleTextColor="@color/c_333333">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_cc_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:src="@drawable/ic_toolbar_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dp_15"
                android:text="@string/vs_choose_center"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cc_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginEnd="@dimen/dp_15"
                android:text="@string/vs_confirm"
                android:textColor="@color/c_515ff0"
                android:textSize="@dimen/sp_14" />

        </FrameLayout>
    </android.support.v7.widget.Toolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <WebView
            android:id="@+id/wb_choose_center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/white_corner_10_bg"
            android:drawableStart="@drawable/yellow_warning"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="center|start"
            android:paddingStart="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_12"
            android:text="@string/vs_center_tips"
            android:textColor="@color/c_FFB345"
            android:textSize="@dimen/sp_11" />
    </FrameLayout>

</LinearLayout>